--- a/.env
+++ b/.env
@@ -57,6 +57,7 @@ REDIS_PORT=6379
 # MAIL_ENCRYPTION=tls
 # MAIL_FROM_ADDRESS=naman.intelcode@gmail.com
 # MAIL_FROM_NAME="${APP_NAME}"
+API_SECRET_KEY=1234567890
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
